# rust-web-api-microservice-template

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  docker.yml  rust-clippy.yml
cli/: Cargo.toml  build.rs
cli/src/: main.rs  options.rs  telemetry.rs
config/: config.app.toml  default.toml
deploy/docker/: 01-custom.toml  01_gpt_answer_server_custom.toml  01_public_custom.toml  config.app.toml  docker-compose.yaml
deploy/local/: custom.toml  docker-compose.yaml  gpt_answer_server_custom.toml
load-tests/: README.md  docker-compose.yaml  test.js
scripts/: install_dependencies.sh
src/: config.rs  lib.rs  verify_flow.rs
src/adapter/: Cargo.toml
src/adapter/src/repositories/: mod.rs  repository_test.rs
src/adapter/src/repositories/grpc/: gpt_answer_client.rs  mod.rs
src/adapter/src/repositories/in_memory/: cache.rs  mod.rs  question.rs
src/adapter/src/repositories/postgres/: config.rs  diesel.toml  question_db.rs  schema.rs
src/adapter/src/repositories/postgres/migrations/00000000000001_create_questions/: down.sql  up.sql
src/adapter/src/repositories/postgres/models/: id.rs  question.rs
src/adapter/src/repositories/redis/: cache.rs
src/adapter/tests/: mod.rs  repository_test.rs
src/common/: Cargo.toml  build.rs
src/common/proto/: gpt_answer.proto
src/common/src/: kill_signals.rs  lib.rs  options.rs
src/common/src/grpc/: gpt_answer.rs
src/common/src/loggers/: telemetry.rs
src/common/src/redis/: redis.rs
src/contracts/: compute_next_layer.rs  event_tracker.rs  helper.rs  init_fri_group.rs  types.rs  verify_fri.rs  verify_merkle.rs
src/core/: Cargo.toml
src/core/src/: lib.rs
src/core/src/common/: errors.rs
src/core/src/entities/: mod.rs  pagination_entity.rs  question.rs  question_filter.rs
src/core/src/ports/: cache.rs  gpt_answer.rs  mod.rs  question.rs
src/gpt_answer_server/: Cargo.toml  build.rs
src/gpt_answer_server/config/: 00-default.toml
src/gpt_answer_server/src/: lib.rs  main.rs  options.rs
src/gpt_answer_server/src/controllers/: gpt_answer.rs  mod.rs
src/public/: Cargo.toml
src/public/config/: 00-default.toml
src/public/src/: errors.rs  lib.rs  main.rs  options.rs  router.rs
src/public/src/bootstrap/: all.rs  mod.rs  options.rs  router.rs
src/public/src/common/: errors.rs
src/public/src/controllers/: question.rs
src/public/src/loggers/: telemetry.rs
src/public/src/routers/: router.rs
src/public/tests/: questions_router_test.rs
