[package]
name = "verifier-onchain-services"
version = "0.1.0"
edition = "2021"

[dependencies]
aptos-sdk = { git = "https://github.com/zk-steve/aptos-core", branch = "steve" }
once_cell = "1.19.0"
tokio = { version = "1.35.1", features = ["full"] }
url = { version = "2.4.0", features = ["serde"] }
anyhow = "1.0.71"
async-trait = "0.1.81"
dotenv = "0.15.0"
color-eyre = "0.6.2"
[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/Tranduy1dol/x25519-dalek", branch = "zeroize_v1.7" }