[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.14.0"
readonly = "0.2.12"
deadpool-diesel = { version = "0.5.0", features = ["postgres", "serde"] }
clap = { version = "4.4.7", features = ["derive"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-opentelemetry = "*"
tracing-bunyan-formatter = "*"
opentelemetry = { version = "0.21.0" }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14.0", features = ["tonic"] }
opentelemetry-semantic-conventions = { version = "*" }
futures = "*"
library = { path = "../library" }
glob = "0.3.1"
openssl = "*"
diesel = { version = "2.1.0", features = ["postgres", "postgres_backend", "uuid"] }
