bin = []
bench = []
test = []
example = []

[package]
name = "adapter"
edition = "2021"
version = "0.0.1"
autobins = true
autoexamples = true
autotests = true
autobenches = true

[dependencies.rust_core]
path = "../core"

[dependencies.common]
path = "../common"

[dependencies.diesel_migrations]
version = "2.1.0"

[dependencies.async-trait]
version = "0.1.80"

[dependencies.deadpool-diesel]
version = "0.6.1"
features = ["postgres", "serde"]

[dependencies.diesel]
version = "2.1.6"
features = ["postgres", "postgres_backend", "uuid"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.testcontainers-modules]
version = "0.5.0"
features = ["postgres", "redis"]

[dependencies.tokio]
version = "1.36.0"
features = ["full"]

[dependencies.anyhow]
version = "1.0.86"

[dependencies.tonic]
version = "0.11.0"

[dependencies.redis-async]
version = "0.17.2"
