bench = []
test = []
example = []

[package]
name = "common"
edition = "2021"
version = "0.0.1"
autobins = true
autoexamples = true
autotests = true
autobenches = true

[dependencies.config]
version = "0.14.0"

[dependencies.glob]
version = "0.3.1"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-bunyan-formatter]
version = "0.3.9"

[dependencies.tracing-opentelemetry]
version = "0.24.0"

[dependencies.opentelemetry]
version = "0.23.0"

[dependencies.opentelemetry-otlp]
version = "0.16.0"
features = ["tonic"]

[dependencies.opentelemetry-semantic-conventions]
version = "0.16.0"

[dependencies.opentelemetry_sdk]
version = "0.23.0"
features = ["rt-tokio"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]

[dependencies.tokio]
version = "1.38.0"

[dependencies.tonic]
version = "0.11.0"

[dependencies.prost]
version = "0.12.4"

[build-dependencies.tonic-build]
version = "0.12.1"

[build-dependencies.glob]
version = "0.3.1"
