bench = []
test = []
example = []

[package]
name = "common"
edition = "2021"
version = "0.0.1"
autobins = true
autoexamples = true
autotests = true
autobenches = true

[dependencies.config]
version = "0.14.0"

[dependencies.glob]
version = "0.3.1"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-bunyan-formatter]
version = "0.3.9"

[dependencies.tracing-opentelemetry]
version = "0.25.0"

[dependencies.opentelemetry]
version = "0.24.0"

[dependencies.opentelemetry-otlp]
version = "0.17.0"
features = ["tonic"]

[dependencies.opentelemetry-semantic-conventions]
version = "0.16.0"

[dependencies.opentelemetry_sdk]
version = "0.24.1"
features = ["rt-tokio"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]

[dependencies.tokio]
version = "1.39.2"

[dependencies.tonic]
version = "0.12.1"

[dependencies.prost]
version = "0.13.1"

[build-dependencies.tonic-build]
version = "0.12.1"

[build-dependencies.glob]
version = "0.3.1"
