[package]
autobenches = true
autobins = true
autoexamples = true
autotests = true
edition = "2021"
name = "common"
version = "0.0.1"

[dependencies]
config = { workspace = true }
glob = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["tonic"] }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[build-dependencies]
glob = { workspace = true }
tonic-build = { workspace = true }
