bin = []
bench = []
test = []
example = []

[package]
name = "rust_core"
edition = "2021"
version = "0.0.1"
autobins = true
autoexamples = true
autotests = true
autobenches = true

[dependencies.async-trait]
version = "0.1.77"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[lib]
path = "src/lib.rs"
name = "rust_core"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
required-features = []
crate-type = ["rlib"]
