bin = []
bench = []
test = []
example = []

[package]
name = "rust_core"
edition = "2021"
version = "0.0.1"
autobins = true
autoexamples = true
autotests = true
autobenches = true

[dependencies.async-trait]
version = "0.1.80"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.thiserror]
version = "1.0.57"

[dependencies.anyhow]
version = "1.0.82"
