[package]
autobenches = true
autobins = true
autoexamples = true
autotests = true
edition = "2021"
name = "rust_core"
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
