bin = []
bench = []
test = []
example = []

[package]
name = "gpt_answer_server"
edition = "2021"
version = "0.0.1"
autobins = true
autoexamples = true
autotests = true
autobenches = true

[dependencies.rust_core]
path = "../core"

[dependencies.common]
path = "../common"

[dependencies.adapter]
path = "../adapter"

[dependencies.tonic]
version = "0.12.1"

[dependencies.prost]
version = "0.13.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.clap]
version = "4.5.10"
features = ["derive"]

[dependencies.tokio]
version = "1.39.1"
features = ["full"]

[dependencies.opentelemetry]
version = "0.24.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.readonly]
version = "0.2.12"

[dependencies.tracing]
version = "0.1"

[build-dependencies.tonic-build]
version = "0.12.1"

[lib]
path = "src/lib.rs"
name = "gpt_answer_server"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
required-features = []
crate-type = ["rlib"]
