[package]
autobenches = true
autobins = true
autoexamples = true
autotests = true
edition = "2021"
name = "gpt_answer_server"
version = "0.0.1"

[dependencies]
adapter = { workspace = true }
clap = { workspace = true, features = ["derive"] }
common = { workspace = true }
opentelemetry = { workspace = true }
prost = { workspace = true }
readonly = { workspace = true }
rust_core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tonic-build = { workspace = true }
tracing = { workspace = true }
