[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.6"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
readonly = "0.2.12"
deadpool-diesel = { version = "0.5.0", features = ["postgres", "serde"] }
clap = { version = "4.4.7", features = ["derive"] }
tracing = "0.1"
opentelemetry = { version = "0.22.0" }
openssl = { version = "0.10.63" }
diesel = { version = "2.1.0", features = [
    "postgres",
    "postgres_backend",
    "uuid",
] }
adapter = { path = "../adapter" }
rust_core = { path = "../core" }
common = { path = "../common" }
serde_json = "1.0"
testcontainers-modules = { version = "0.3.4", features = ["postgres"] }
rand = "0.8.4"
diesel_migrations = "2.1.0"
