bench = []
example = []

[[bin]]
path = "src/main.rs"
name = "cli"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
required-features = []

[[test]]
path = "tests/mod.rs"
name = "mod"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
required-features = []

[[test]]
path = "tests/questions_router_test.rs"
name = "questions_router_test"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
required-features = []

[package]
name = "cli"
edition = "2021"
version = "0.0.1"
build = "build.rs"
autobins = true
autoexamples = true
autotests = true
autobenches = true

[dependencies.common]
path = "../common"

[dependencies.adapter]
path = "../adapter"

[dependencies.rust_core]
path = "../core"

[dependencies.diesel_migrations]
version = "2.1.0"

[dependencies.rand]
version = "0.8.4"

[dependencies.readonly]
version = "0.2.12"

[dependencies.serde_json]
version = "1.0"

[dependencies.tracing]
version = "0.1"

[dependencies.warp]
version = "0.3.7"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.deadpool-diesel]
version = "0.6.1"
features = ["postgres", "serde"]

[dependencies.diesel]
version = "2.1.6"
features = ["postgres", "postgres_backend", "uuid"]

[dependencies.openssl]
version = "0.10.64"

[dependencies.opentelemetry]
version = "0.22.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.testcontainers-modules]
version = "0.4.2"
features = ["postgres"]

[dependencies.tokio]
version = "1.36.0"
features = ["full"]

[dependencies.thiserror]
version = "1.0.59"

[dependencies.anyhow]
version = "1.0.83"

[lib]
path = "src/lib.rs"
name = "cli"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
required-features = []
crate-type = ["rlib"]
