[package]
autobenches = true
autobins = true
autoexamples = true
autotests = true
build = "build.rs"
edition = "2021"
name = "cli"
version = "0.0.1"

[dependencies]
adapter = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
common = { workspace = true }
deadpool-diesel = { workspace = true, features = ["postgres", "serde"] }
diesel = { workspace = true, features = [
  "postgres",
  "postgres_backend",
  "uuid",
] }
diesel_migrations = { workspace = true }
openssl = { workspace = true }
opentelemetry = { workspace = true }
rand = { workspace = true }
readonly = { workspace = true }
rust_core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres", "redis"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
warp = { workspace = true }
